Blackpurl/src/objects/Customer_Owned_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.Is_Customer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Id_Category__c</fullName>
        <label>Accounting Id - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Category__c</fullName>
        <label>Accounting Last Sync Time - Category</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Category__c</fullName>
        <label>Accounting Response - Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of days between “Date Stocked In” and either the Current System Date or the “Date Stocked Out” whichever is older</description>
        <formula>IF( Date_Stocked_Out__c &lt; TODAY(), Date_Stocked_Out__c - Date_Stocked_In__c, TODAY() -Date_Stocked_In__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Date__c</fullName>
        <label>Compliance Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Of_1st_Rego__c</fullName>
        <label>Year Of 1st Rego</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Serial__c</fullName>
        <label>Registration Serial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales tax to apply on unit</description>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_1__c</fullName>
        <label>Assigned Tag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_2__c</fullName>
        <label>Assigned Tag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is unit automatic or not</description>
        <label>Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avail_For_QB_Sync_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avail For QB Sync - Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category assigned to the unit</description>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>Exterior Colour of unit</description>
        <label>Exterior Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cylinders__c</fullName>
        <description>Number of cylinders in unit</description>
        <label>Cylinders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DP360_Inventory_Id__c</fullName>
        <label>DP360 Inventory Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Stocked_In__c</fullName>
        <description>Date the unit was stocked into inventory</description>
        <label>Date Stocked In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stocked_Out__c</fullName>
        <description>Date the unit was removed from inventory</description>
        <label>Date Stocked Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Options_WIP__c</fullName>
        <label>Deal Options WIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Displacement__c</fullName>
        <description>Displacement of unit</description>
        <label>Displacement</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Serial_No__c</fullName>
        <description>Engine Serial Number of unit</description>
        <label>Engine Serial No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Order_No__c</fullName>
        <description>Factory order number of unit</description>
        <label>Factory Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name__c</fullName>
        <formula>IF( NOT(ISBLANK(Unit_Make__c)), Unit_Make__r.Name, &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Unit_Model__c)), &apos; &apos; &amp; Unit_Model__r.Name__c, &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Sub_Model__r.Sub_Model_Name__c)), &apos; &apos; &amp; Sub_Model__r.Sub_Model_Name__c, &apos;&apos;) &amp; 
IF( NOT(ISNULL(Year__c)), &apos; &apos; &amp; TEXT(Year__c), &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Colour__c)), &apos;, &apos; &amp; Colour__c, &apos;&apos;)</formula>
        <label>Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gears__c</fullName>
        <description>Number of Gears in unit</description>
        <label>Gears</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interior_Colour__c</fullName>
        <description>Interior Colour of unit</description>
        <label>Interior Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Ordered_Unit_Added_To_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ordered Unit Added To Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_No__c</fullName>
        <description>Key number of unit</description>
        <label>Key No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the unit</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Name__c</fullName>
        <formula>Unit_Make__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Date__c</fullName>
        <description>Manufactured date of this unit</description>
        <label>Manufactured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_COU_Count__c</fullName>
        <label>Max COU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Stock_Count__c</fullName>
        <description>This will store the maximum count for Unit Present</description>
        <label>Max Stock Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Type__c</fullName>
        <description>Mileage types for unit</description>
        <label>Mileage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Mi</fullName>
                </value>
                <value>
                    <fullName>Hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage_Value__c</fullName>
        <description>Mileage of unit</description>
        <label>Mileage Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>This mileage is not in use as we have created new field(Mileage Value).</description>
        <label>Mileage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Detail__c</fullName>
        <formula>Model_Name__c &amp; &apos; &apos; &amp; Sub_Model__r.Sub_Model_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Unit_Model__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if unit is new</description>
        <label>New Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General unit notes</description>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORDU_Stock_Id__c</fullName>
        <label>ORDU Stock Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Old Category)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Serial_No__c</fullName>
        <description>Other serial number of unit</description>
        <label>Other Serial No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <description>Plate/Reg number of unit</description>
        <label>Plate/Reg No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenced_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenced Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reg_Expiry_Date__c</fullName>
        <description>Records the registration expiry date of a customer owned unit</description>
        <inlineHelpText>Records the registration expiry date of a customer owned unit</inlineHelpText>
        <label>Reg Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Credit__c</fullName>
        <description>amount the sales tax was reduced on the deal because of the trade</description>
        <label>Sales Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <description>Search Tag</description>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of unit based on unit type</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unit_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Traded</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockId__c</fullName>
        <description>This will contain the stock id</description>
        <label>StockId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stock_Id__c</fullName>
        <description>This will contain the stock id</description>
        <label>Stock Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stocked_In_DateTime__c</fullName>
        <label>Stocked In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Model</label>
        <referenceTo>Unit_Sub_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submodel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub model of unit</description>
        <label>Unit SubModel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Submodel)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Token_Category__c</fullName>
        <label>Sync Token - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is unit taxable or not</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Base_Unit_Price__c</fullName>
        <description>Price total of all Base Units related to this unit.</description>
        <label>Total Base Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Base_Units_Cost__c</fullName>
        <description>Total Base unit cost</description>
        <label>Total Base Units Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total Cost</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Options_Cost__c</fullName>
        <description>Total Dealer Options Cost</description>
        <label>Total Dealer Options Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Options_Price__c</fullName>
        <description>Price Total of all Dealer Options related to this unit.</description>
        <label>Total Dealer Options Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Factory_Options_Cost__c</fullName>
        <description>Total Factory Options Cost</description>
        <label>Total Factory Options Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Factory_Options_Price__c</fullName>
        <description>Total Factory Options Price</description>
        <label>Total Factory Options Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Price</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In_Value__c</fullName>
        <description>net of sales tax</description>
        <label>Trade In Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitId__c</fullName>
        <description>This field will have Unit Id fully generated</description>
        <label>UnitId</label>
        <length>155</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <description>This will be used for Generating unit Id</description>
        <label>Unit Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Make of unit</description>
        <label>Unit Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model of unit</description>
        <label>Unit Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <formula>IF( Unit_Id__c != null, Unit_Id__c , Stock_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Types of units</description>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COU</fullName>
                </value>
                <value>
                    <fullName>STOCK</fullName>
                </value>
                <value>
                    <fullName>ORDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN_Number_Formula__c</fullName>
        <formula>IF( ISBLANK(VIN_Number__c), &apos;VIN Unknown&apos;, VIN_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Number__c</fullName>
        <description>This VIN number is used. Please ignore previous VIN__c.</description>
        <label>VIN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Vehicle Identification Number</description>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Owned Units (Vendor)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_JE_Accounting_Id__c</fullName>
        <label>Xero JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_As_String__c</fullName>
        <formula>TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year As String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Model year of the unit</description>
        <label>Unit Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Owned Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>VIN_Number__c</columns>
        <columns>Unit_Id__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Stock_Id__c</columns>
        <columns>Unit_Make__c</columns>
        <columns>Unit_Model__c</columns>
        <columns>Submodel__c</columns>
        <columns>Sub_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Id__c</columns>
        <columns>Make_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Units</label>
    </listViews>
    <listViews>
        <fullName>Stock_Unit</fullName>
        <columns>NAME</columns>
        <columns>Unit_Number__c</columns>
        <columns>Max_Stock_Count__c</columns>
        <columns>Max_COU_Count__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unit_Type__c</field>
            <operation>equals</operation>
            <value>STOCK</value>
        </filters>
        <label>Stock Unit</label>
    </listViews>
    <nameField>
        <displayFormat>COU-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Owned Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>